# BaseballStats

./: Cargo.toml
auto_complete/: mlb_auto_complete.sh  mlb_cmd.sh  teams.txt
database/: ids.txt  player_ids.txt  players.txt  team_ids.txt  teams.txt
src/: batter_stats.rs  data_id.rs  database.rs  database_generator.rs  game.rs  hitting_stats.rs  leaders.rs  league_averages.rs  main.rs  pitching_stats.rs  query.rs  standings.rs  stats.rs  teams.rs
