[package]
name = "mlb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde_json = "1.0.120"
chrono = "0.4.38"
term-table = "1.4.0"
figlet-rs = "0.1.5"
phf = "0.11.2"
phf_macros = "0.11.2"
thiserror = "1.0.63"
regex = "1.10.5"
